--- a/javaTeam/src/main/resources/templates/layout/header.html
+++ b/javaTeam/src/main/resources/templates/layout/header.html
@@ -23,8 +23,9 @@
                 <li><a href="/login/login">Login</a></li>
                 <li><a href="/login/register" th:href="@{/login/register}">Join</a></li>
             </ul>
+            <a href="/park/main.do" class="_link"><img src="/img/minsome_s_logo.png" sizes="20" alt="로고"></a>
             <a href="/park/main.do" class="_link"><img src="/img/minsome_s_person.png" sizes="20" alt="로고"></a>
-            <a href="/park/main.do" class="_link"><img src="/img/minsome_s_person.png" sizes="20" alt="로고"></a>
+            <a href="/park/main.do" class="_link"><img src="/img/minsome_s_m.png" sizes="20" alt="로고"></a>
             <ul class="nav">
                 <li><a href="#">소개</a>
                     <div class="sub"> <!--배경색-->
@@ -48,9 +49,9 @@
                             <ul class="menu2">
                             </ul>
                             <ul class="menu3">
-                                <li><a href="#">런린이</a></li>
-                                <li><a href="#">중급자</a></li>
-                                <li><a href="#">상급자</a></li>
+                                <li><a href="#">런런</a></li>
+                                <li><a href="#">부산런</a></li>
+                                <li><a href="#">전국런</a></li>
                             </ul>
 
                             <ul class="menu4">
@@ -77,6 +78,7 @@
                             <ul class="menu4">
                                 <li><a href="#">민소메이트</a></li>
                                 <li><a href="#">인증게시판</a></li>
+                                <li><a href="#">아이템</a></li>
                             </ul>
                         </div>
                     </div>
