--- a/javaTeam/src/main/resources/templates/park/parkMain.html
+++ b/javaTeam/src/main/resources/templates/park/parkMain.html
@@ -26,7 +26,9 @@
     <script src="/js/aos.js"></script><!-- aos 소스 -->
     <script src="/js/sub.js"></script>
     <script src="/js/script.js"></script>
-
+<style>
+    #move1
+</style>
 
 </head>
 
@@ -42,8 +44,80 @@
 </div>
 
 <div id="sub2">
-    <h2>주변 관광지</h2>
-    <h4>끄라비의 주변 관광지를 소개해드려요.</h4>
+    <h2>주변 코스</h2>
+    <h4>부산의 러닝코스를 소개해드려요.</h4>
+
+
+
+
+    <div class="sub_hotel">
+        <div class="hotelbox">
+            <h3>민소매 <br>
+                추천코스</h3>
+            <ul class="hotelbot">
+                <li><a href="#" id="move1">해운대</a></li>
+                <li><a href="#">온천천</a></li>
+                <li><a href="#">강변</a></li>
+            </ul>
+        </div>
+        <ul class="hotellist">
+            <li><a href="#">
+                <img src="./img/sub/hotel4.png" alt="호텔사진">
+                <div class="hoteltext">
+                    <div class="star">
+                        <img src="/img/온천천_메인1.jfif" alt="별">
+                        <img src="/img/온천천_메인2.jfif" alt="별">
+                        <img src="./img/star.png" alt="별">
+                        <img src="./img/star.png" alt="별">
+                        <img src="./img/star.png" alt="별">
+                        <p>5성급</p>
+                    </div>
+                    <h3>라야바디 호텔 (SHA Plus+)</h3>
+                    <p>라일레이에서 제일 고급 숙소, 자연 속에
+                        있는 듯한 프라이빗 풀빌라</p>
+                </div>
+            </a>
+            </li>
+
+            <li><a href="#">
+                <img src="./img/sub/hotel4.png" alt="호텔사진">
+                <div class="hoteltext">
+                    <div class="star">
+                        <img src="./img/star.png" alt="별">
+                        <img src="./img/star.png" alt="별">
+                        <img src="./img/star.png" alt="별">
+                        <img src="./img/star.png" alt="별">
+                        <img src="./img/star.png" alt="별">
+                        <p>5성급</p>
+                    </div>
+                    <h3>라야바디 호텔 (SHA Plus+)</h3>
+                    <p>라일레이에서 제일 고급 숙소, 자연 속에
+                        있는 듯한 프라이빗 풀빌라</p>
+                </div>
+            </a>
+            </li>
+
+
+            <li><a href="#">
+                <img src="./img/sub/hotel4.png" alt="호텔사진">
+                <div class="hoteltext">
+                    <div class="star">
+                        <img src="./img/star.png" alt="별">
+                        <img src="./img/star.png" alt="별">
+                        <img src="./img/star.png" alt="별">
+                        <img src="./img/star.png" alt="별">
+                        <img src="./img/star.png" alt="별">
+                        <p>5성급</p>
+                    </div>
+                    <h3>라야바디 호텔 (SHA Plus+)</h3>
+                    <p>라일레이에서 제일 고급 숙소, 자연 속에
+                        있는 듯한 프라이빗 풀빌라</p>
+                </div>
+            </a>
+            </li>
+        </ul>
+    </div>
+
     <div class="spot1">
         <img src="" alt="부산야경">
         <div class="spottext">
@@ -106,114 +180,45 @@
         모두 헬로끄라비와 함께하세요.</h4>
 </div>
 
-<div class="sub_hotel">
-    <div class="hotelbox">
-        <h3>끄라비 <br>
-            인기숙소</h3>
-        <ul class="hotelbot">
-            <li><a href="#">아오낭</a></li>
-            <li><a href="#">라일레이</a></li>
-            <li><a href="#">피피섬</a></li>
-        </ul>
-    </div>
-    <ul class="hotellist">
-        <li><a href="#">
-            <img src="./img/sub/hotel4.png" alt="호텔사진">
-            <div class="hoteltext">
-                <div class="star">
-                    <img src="./img/star.png" alt="별">
-                    <img src="./img/star.png" alt="별">
-                    <img src="./img/star.png" alt="별">
-                    <img src="./img/star.png" alt="별">
-                    <img src="./img/star.png" alt="별">
-                    <p>5성급</p>
-                </div>
-                <h3>라야바디 호텔 (SHA Plus+)</h3>
-                <p>라일레이에서 제일 고급 숙소, 자연 속에
-                    있는 듯한 프라이빗 풀빌라</p>
-            </div>
-        </a>
-        </li>
-
-        <li><a href="#">
-            <img src="./img/sub/hotel4.png" alt="호텔사진">
-            <div class="hoteltext">
-                <div class="star">
-                    <img src="./img/star.png" alt="별">
-                    <img src="./img/star.png" alt="별">
-                    <img src="./img/star.png" alt="별">
-                    <img src="./img/star.png" alt="별">
-                    <img src="./img/star.png" alt="별">
-                    <p>5성급</p>
-                </div>
-                <h3>라야바디 호텔 (SHA Plus+)</h3>
-                <p>라일레이에서 제일 고급 숙소, 자연 속에
-                    있는 듯한 프라이빗 풀빌라</p>
-            </div>
-        </a>
-        </li>
 
 
-        <li><a href="#">
-            <img src="./img/sub/hotel4.png" alt="호텔사진">
-            <div class="hoteltext">
-                <div class="star">
-                    <img src="./img/star.png" alt="별">
-                    <img src="./img/star.png" alt="별">
-                    <img src="./img/star.png" alt="별">
-                    <img src="./img/star.png" alt="별">
-                    <img src="./img/star.png" alt="별">
-                    <p>5성급</p>
-                </div>
-                <h3>라야바디 호텔 (SHA Plus+)</h3>
-                <p>라일레이에서 제일 고급 숙소, 자연 속에
-                    있는 듯한 프라이빗 풀빌라</p>
-            </div>
-        </a>
-        </li>
-    </ul>
-</div>
+<!--<div id="tourlist">-->
+<!--    <div class="tourtitle">-->
+<!--        <h2>지금핫한<br>-->
+<!--            끄라비투어</h2>-->
+<!--    </div>-->
+<!--    <div class="swiper-container sub2_gallery">-->
+<!--        <div class="sub2_gallery_inner">-->
+<!--            <div class="swiper-wrapper">-->
+<!--                <div class="swiper-slide">-->
+<!--                    <a href="#"><img src="./img/sub/sub_tour.png" alt="갤러리1"></a>-->
+<!--                </div>-->
+<!--                <div class="swiper-slide twoclass">-->
+<!--                    <a href="#"><img src="./img/sub/sub_tour2.png" alt="갤러리1"></a>-->
+<!--                </div>-->
+<!--                <div class="swiper-slide">-->
+<!--                    <a href="#"><img src="./img/sub/sub_tour3.png" alt="갤러리1"></a>-->
+<!--                </div>-->
+<!--                <div class="swiper-slide">-->
+<!--                    <a href="#"><img src="./img/sub/sub_tour2.png" alt="갤러리1"></a>-->
+<!--                </div>-->
+<!--                <div class="swiper-slide">-->
+<!--                    <a href="#"><img src="./img/sub/sub_tour.png" alt="갤러리1"></a>-->
+<!--                </div>-->
 
-<div id="tourlist">
-    <div class="tourtitle">
-        <h2>지금핫한<br>
-            끄라비투어</h2>
-    </div>
-    <div class="swiper-container sub2_gallery">
-        <div class="sub2_gallery_inner">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <a href="#"><img src="./img/sub/sub_tour.png" alt="갤러리1"></a>
-                </div>
-                <div class="swiper-slide twoclass">
-                    <a href="#"><img src="./img/sub/sub_tour2.png" alt="갤러리1"></a>
-                </div>
-                <div class="swiper-slide">
-                    <a href="#"><img src="./img/sub/sub_tour3.png" alt="갤러리1"></a>
-                </div>
-                <div class="swiper-slide">
-                    <a href="#"><img src="./img/sub/sub_tour2.png" alt="갤러리1"></a>
-                </div>
-                <div class="swiper-slide">
-                    <a href="#"><img src="./img/sub/sub_tour.png" alt="갤러리1"></a>
-                </div>
+<!--            </div>-->
+<!--            &lt;!&ndash; 블릿 버튼 &ndash;&gt;-->
+<!--            <div class="swiper-pagination"></div>-->
+<!--            &lt;!&ndash; 화살표 버튼 &ndash;&gt;-->
+<!--            <div class="swiper-button-next"></div>-->
+<!--            <div class="swiper-button-prev"></div>-->
+<!--        </div>-->
+<!--    </div>-->
 
-            </div>
-            <!-- 블릿 버튼 -->
-            <div class="swiper-pagination"></div>
-            <!-- 화살표 버튼 -->
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-        </div>
-    </div>
-
-</div>
+<!--</div>-->
 
 
 <div th:replace="~{/layout/footer :: footer-basic}"></div>
-
-
-
 
 
 
