로그인수정

--- a/javaTeam/src/main/resources/templates/login/login.html
+++ b/javaTeam/src/main/resources/templates/login/login.html
@@ -38,14 +38,14 @@
     <section>
         <div class="row">
             <div class="col-sm-4 mx-auto">
-                <form action="LoginProcess.jsp" method="post">
+                <form action="/login/LoginProcess" method="post">
                     <div class="my-3 form-floating">
                         <input type="text" class="form-control" id="id" name="id" placeholder="아이디를 입력하세요.">
                         <label for="id">아이디를 입력하세요.</label>
                     </div>
                     <div class="my-3 form-floating">
-                        <input type="password" class="form-control" id="pwd" name="pwd" placeholder="비밀번호를 입력하세요.">
-                        <label for="pwd">비밀번호를 입력하세요.</label>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호를 입력하세요.">
+                        <label for="password">비밀번호를 입력하세요.</label>
                     </div>
                     <div class="my-3 d-grid">
                         <button type="submit" class="btn btn-primary">로그인</button>
