--- a/javaTeam/src/main/resources/static/css/style.css
+++ b/javaTeam/src/main/resources/static/css/style.css
@@ -14,6 +14,19 @@
 
 #mainNav {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    background-color: #fff;
+    background-color: #0085FF;
     transition: background-color 0.2s ease;
+}
+
+input {
+    font-size: 25px;
+    color: #333333;
+    width: 300px;
+    border: none;
+    border-bottom: solid #0085FF 1px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    position: relative;
+    background: none;
+    z-index: 5;
 }
