--- a/javaTeam/src/main/resources/templates/login/register.html
+++ b/javaTeam/src/main/resources/templates/login/register.html
@@ -84,11 +84,12 @@
     }
 </style>
 <body class="d-flex justify-content-center">
-<div>
+
+<div style="width: 400px">
     <form action="/login/registerProcess"  method="post" >
-            <a href="/park/main.do"><img src="/img/minsome_s_person.png" sizes="15" alt="로고"></a>
-            <a href="/park/main.do"><img src="/img/minsome_s_person.png" sizes="15" alt="로고"></a>
-            <a href="/park/main.do"><img src="/img/minsome_s_person.png" sizes="15" alt="로고"></a>
+        <a href="/hello1"><img src="/img/minsome_s_person.png" sizes="15" alt="로고"></a>
+        <a href="/hello1"><img src="/img/minsome_s_person.png" sizes="15" alt="로고"></a>
+        <a href="/hello1"><img src="/img/minsome_s_person.png" sizes="15" alt="로고"></a>
 
         <h2 class="text-center">회원가입</h2>
         <div>
