--- a/javaTeam/src/main/resources/templates/main.html
+++ b/javaTeam/src/main/resources/templates/main.html
@@ -56,14 +56,14 @@
         <img src="image.jpg" alt="카드 이미지">
         <div class="card-content">
             <h2 class="card-title">카드 제목</h2>
-            <p class="card-text">카드 내용</p>
+
         </div>
     </article>
     <article class="card">
-        <img src="image2.jpg" alt="카드 이미지">
+        <img src="/img/img.png" alt="카드 이미지">
         <div class="card-content">
             <h2 class="card-title">카드 제목</h2>
-            <p class="card-text">카드 내용</p>
+
         </div>
     </article>
 </section>
