--- a/javaTeam/src/main/resources/templates/layout/header.html
+++ b/javaTeam/src/main/resources/templates/layout/header.html
@@ -19,9 +19,19 @@
 
 <header th:fragment="header-basic">
         <div class="header_in">
-            <ul class="header_top">
-                <li><a href="/login/login">Login</a></li>
+            <ul class="header_top" th:if="${session.id} == null">
+                <li><a href="/login/login.do">Login</a></li>
                 <li><a href="/login/register" th:href="@{/login/register}">Join</a></li>
+            </ul>
+            <ul class="header_top" th:unless="${session.id} == null">
+
+
+                <li class="p_user"><p th:text="${session.nickName} +'님'"></p></li>
+                <li class="p_user"><p>반갑습니다.</p></li>
+                <li><a href="/mypage/mypage" th:href="@{/mypage/mypage}">MYPage</a></li>
+                <li><a href="/login/logout.do">Logout</a></li>
+
+
             </ul>
             <a href="/park/main.do" class="_link"><img src="/img/minsome_s_logo.png" sizes="20" alt="로고"></a>
             <a href="/park/main.do" class="_link"><img src="/img/minsome_s_person.png" sizes="20" alt="로고"></a>
