--- a/javaTeam/src/main/resources/templates/park/parkMain.html
+++ b/javaTeam/src/main/resources/templates/park/parkMain.html
@@ -26,9 +26,16 @@
     <script src="/js/aos.js"></script><!-- aos 소스 -->
     <script src="/js/sub.js"></script>
     <script src="/js/script.js"></script>
-<style>
-    #move1
-</style>
+    <style>
+        /*.nav {width: 100%;}*/
+        .nav li {position: relative; color: transparent; font-size: 30px; margin: 50px; -webkit-text-stroke: 1px black; transition: all .5s;}
+        .nav li:hover {color: black;}
+        .nav li:hover img {display: block;}
+        .nav li img {display: none; position: absolute; left: 50%; top: 50%; width: 300px; height: 350px; transform: translate(-50%,-50%); z-index: -1; transition: all .5s; border-radius: 15px;}
+        .spot1{
+            margin: auto;
+        }
+    </style>
 
 </head>
 
@@ -40,138 +47,125 @@
 
 <div class="sub2_top">
     <h2>부산 러닝<br>
-        대한 모든것, 민소매</h2>
+        모든것, 민소매</h2>
 </div>
 
 <div id="sub2">
-    <h2>주변 코스</h2>
-    <h4>부산의 러닝코스를 소개해드려요.</h4>
+    <h2>뛰어봤나! 여기가 부산이다!</h2>
+    <h4>민소매가 추천해요.</h4>
 
 
-
-
-    <div class="sub_hotel">
+    <div class="sub_hote">
         <div class="hotelbox">
             <h3>민소매 <br>
                 추천코스</h3>
-            <ul class="hotelbot">
-                <li><a href="#" id="move1">해운대</a></li>
-                <li><a href="#">온천천</a></li>
-                <li><a href="#">강변</a></li>
+
+        </div>
+        <br>
+        <div class="nav_wrap2" style="height:350px">
+            <ul class="nav">
+                <li class="he">
+                    해운대
+                    <img src="/img/he.jpeg" alt="">
+                </li>
+                <li class="on">
+                    온천천
+                    <img src="/img/온천천_메인1.jfif" alt="">
+                </li>
+                <li class="riv">
+                    갈맷길
+                    <img src="/img/galmemap.jpg" alt="">
+                </li>
             </ul>
         </div>
-        <ul class="hotellist">
-            <li><a href="#">
-                <img src="./img/sub/hotel4.png" alt="호텔사진">
-                <div class="hoteltext">
-                    <div class="star">
-                        <img src="/img/온천천_메인1.jfif" alt="별">
-                        <img src="/img/온천천_메인2.jfif" alt="별">
-                        <img src="./img/star.png" alt="별">
-                        <img src="./img/star.png" alt="별">
-                        <img src="./img/star.png" alt="별">
-                        <p>5성급</p>
-                    </div>
-                    <h3>라야바디 호텔 (SHA Plus+)</h3>
-                    <p>라일레이에서 제일 고급 숙소, 자연 속에
-                        있는 듯한 프라이빗 풀빌라</p>
-                </div>
-            </a>
-            </li>
 
-            <li><a href="#">
-                <img src="./img/sub/hotel4.png" alt="호텔사진">
-                <div class="hoteltext">
-                    <div class="star">
-                        <img src="./img/star.png" alt="별">
-                        <img src="./img/star.png" alt="별">
-                        <img src="./img/star.png" alt="별">
-                        <img src="./img/star.png" alt="별">
-                        <img src="./img/star.png" alt="별">
-                        <p>5성급</p>
-                    </div>
-                    <h3>라야바디 호텔 (SHA Plus+)</h3>
-                    <p>라일레이에서 제일 고급 숙소, 자연 속에
-                        있는 듯한 프라이빗 풀빌라</p>
-                </div>
-            </a>
-            </li>
+        <!--        <ul class="hotellist">-->
+        <!--            <li><a href="#">-->
+        <!--                <img src="./img/sub/hotel4.png" alt="호텔사진">-->
+        <!--                <div class="hoteltext">-->
+        <!--                    <div class="star">-->
+        <!--                        <img src="/img/온천천_메인1.jfif" alt="별">-->
+        <!--                        <img src="/img/온천천_메인2.jfif" alt="별">-->
+        <!--                        <img src="./img/star.png" alt="별">-->
+        <!--                        <img src="./img/star.png" alt="별">-->
+        <!--                        <img src="./img/star.png" alt="별">-->
+        <!--                        <p>5성급</p>-->
+        <!--                    </div>-->
+        <!--                    <h3>라야바디 호텔 (SHA Plus+)</h3>-->
+        <!--                    <p>라일레이에서 제일 고급 숙소, 자연 속에-->
+        <!--                        있는 듯한 프라이빗 풀빌라</p>-->
+        <!--                </div>-->
+        <!--            </a>-->
+        <!--            </li>-->
+
+        <!--            <li><a href="#">-->
+        <!--                <img src="./img/sub/hotel4.png" alt="호텔사진">-->
+        <!--                <div class="hoteltext">-->
+        <!--                    <div class="star">-->
+        <!--                        <img src="./img/star.png" alt="별">-->
+        <!--                        <img src="./img/star.png" alt="별">-->
+        <!--                        <img src="./img/star.png" alt="별">-->
+        <!--                        <img src="./img/star.png" alt="별">-->
+        <!--                        <img src="./img/star.png" alt="별">-->
+        <!--                        <p>5성급</p>-->
+        <!--                    </div>-->
+        <!--                    <h3>라야바디 호텔 (SHA Plus+)</h3>-->
+        <!--                    <p>라일레이에서 제일 고급 숙소, 자연 속에-->
+        <!--                        있는 듯한 프라이빗 풀빌라</p>-->
+        <!--                </div>-->
+        <!--            </a>-->
+        <!--            </li>-->
 
 
-            <li><a href="#">
-                <img src="./img/sub/hotel4.png" alt="호텔사진">
-                <div class="hoteltext">
-                    <div class="star">
-                        <img src="./img/star.png" alt="별">
-                        <img src="./img/star.png" alt="별">
-                        <img src="./img/star.png" alt="별">
-                        <img src="./img/star.png" alt="별">
-                        <img src="./img/star.png" alt="별">
-                        <p>5성급</p>
-                    </div>
-                    <h3>라야바디 호텔 (SHA Plus+)</h3>
-                    <p>라일레이에서 제일 고급 숙소, 자연 속에
-                        있는 듯한 프라이빗 풀빌라</p>
-                </div>
-            </a>
-            </li>
-        </ul>
+        <!--            <li><a href="#">-->
+        <!--                <img src="./img/sub/hotel4.png" alt="호텔사진">-->
+        <!--                <div class="hoteltext">-->
+        <!--                    <div class="star">-->
+        <!--                        <img src="./img/star.png" alt="별">-->
+        <!--                        <img src="./img/star.png" alt="별">-->
+        <!--                        <img src="./img/star.png" alt="별">-->
+        <!--                        <img src="./img/star.png" alt="별">-->
+        <!--                        <img src="./img/star.png" alt="별">-->
+        <!--                        <p>5성급</p>-->
+        <!--                    </div>-->
+        <!--                    <h3>라야바디 호텔 (SHA Plus+)</h3>-->
+        <!--                    <p>라일레이에서 제일 고급 숙소, 자연 속에-->
+        <!--                        있는 듯한 프라이빗 풀빌라</p>-->
+        <!--                </div>-->
+        <!--            </a>-->
+        <!--            </li>-->
+        <!--        </ul>-->
     </div>
 
-    <div class="spot1">
-        <img src="" alt="부산야경">
+    <div class="spot1" style="height: 500px">
+        <img src="/img/runimg1.jfif" alt="1">
         <div class="spottext">
-            <h3>아오낭비치</h3>
-            <p>만약 숙소를 예약한다면 아오낭비치 근처를 추천드려요. <br>
-                끄라비에서 많은 사람들이 모이는 곳으로  아오낭의 <br>
-                로컬가게들부터 쇼핑거리, 투어리스트,
-                작은 야시장까지 갖추고 있답니다. <br>
-                석양이 지는 아오낭비치는 선셋포인트에서
-                황금빛 노을과 불꽃쇼를 감상하길 추천해요.</p>
+            <h3>런린이의 기초상식</h3>
+            <p>런닝은 간단한 것처럼 보일 수 있지만, 올바른 기초를 알고 시작하는 것이 중요합니다. <br>
+                1. 적절한 신발 착용<br>
+                2. 올바른 자세 유지<br>
+                3. 러닝을 시작할 때는 천천히 걷거나 달리기를 시작하고, 점진적으로 속도와 거리를 늘려가며 몸을 적응시킵니다.<br>
+                이러한 기초를 기억하면 부상의 위험을 줄이고, 효과적이고 안전한 러닝 경험을 얻을 수 있습니다.</p>
         </div>
     </div>
     <div class="spot2">
         <div class="spottext">
-            <h3>라일레이</h3>
-            <p>아오낭비치에서 배를 타고 10분이면 갈 수 있는
-                라일레이는 아름다운 바다인 프라낭비치와
-                암벽등반을 할 수 있는 곳으로 많은 관광객들이
-                끄라비에 오면 필수로 들러보는 곳이랍니다. <br>
-                멋진 증유석 동굴과 원숭이까지 구경하고
-                석양이 아름다운 서라일레이 비치에서는 석양을 보며
-                식사를 할 수 있는 <br> 리조트와 식당들도 있어요.</p>
+            <h3>함께 뛰어요!</h3>
+            <p>다양한 경험을 나누고 목표 달성을 위해 서로 동기를 부여할 수 있습니다 <br>
+                러닝은 개인 운동이지만, 러닝크루에 참여하면 사회적 활동의 즐거움을 느낄 수 있습니다. <br>
+                러닝크루는 다양한 러너들의 경험을 공유하는 플랫폼입니다. 새로운 루트, 운동 기술, 용품 등에 대한 유용한 정보를 얻을 수 있습니다.</p>
         </div>
-        <img src="./img/sub/spot-2.png" alt="라일레이">
+        <img src="/img/runtoge.jfif" alt="함께">
     </div>
     <div class="spot3">
-        <img src="./img/sub/spot-3.png" alt="피피섬">
+        <img src="/img/maraton.jfif" alt="마라톤">
         <div class="spottext">
-            <h3>피피섬</h3>
-            <p>안다만의 에메랄드 빛 바다가 정말 아름다운
-                피피섬은 <br> 몰디브 바다가 부럽지 않은 예쁜 바다를
-                구경할 수 있어요. <br>
-                레오나르도 디카프리오 주연의 영화인 '비치'의 <br>
-                뱀부섬과 물고기와 산호초를 보며 수영하는
-                스노클링까지 '4섬투어' , '홍섬투어', '피피섬 투어'
-                같은 대표적인 <br>
-                여행코스를 할 수 있습니다.
-            </p>
+            <h3>도전의 순간, 당신의 마라톤을 시작하세요!</h3>
+            <p>더 나은 자신, 건강한 삶, 그리고 끝없는 성장이 당신을 기다리고 있습니다. <br>
+                함께 달려, 당신의 한계를 넘어 최고의 버전으로 거듭나보세요! 🏃‍♂️🌟 </p>
         </div>
     </div>
-    <div class="spot4">
 
-        <div class="spottext">
-            <h3>끄라비타운 야시장</h3>
-            <p>끄라비 타운 시내에 위치한 나이트마켓, <br>
-                다양한 음식과 불쇼, 태국 전통의상 등 공연이 있어
-                먹거리, 볼거리 모두 충족할 수 있습니다. <br>
-                금, 토, 일 저녁 5시부터 오픈하는 야시장으로 <br>
-                정해진 요일과 시간에만 갈 수 있습니다. <br>
-                끄라비의 핫한 야시장의 활기찬 분위기를 느껴보세요.
-            </p>
-        </div>
-        <img src="./img/sub/spot-4.png" alt="야시장">
-    </div>
 </div>
 
 <div class="subban2">
