--- a/javaTeam/src/main/resources/static/css/sub1.css
+++ b/javaTeam/src/main/resources/static/css/sub1.css
@@ -435,8 +435,8 @@ h4 {
 
 .sub2_top{
     width: 100%;
-    height: 800px;
-    background: url(../img/moon.png) no-repeat center;
+    height:1000px;
+    background: url(../img/backMain_1.png) no-repeat center;
     background-size: cover;
     text-align: center;
 }
