--- a/javaTeam/src/main/resources/templates/layout/header.html
+++ b/javaTeam/src/main/resources/templates/layout/header.html
@@ -33,7 +33,7 @@
 
 
             </ul>
-            <a href="/park/main.do" class="_link"><img src="/img/minsome_s_logo.png" sizes="20" alt="로고"></a>
+            <a href="/hello1" class="_link"><img src="/img/minsome_s_logo.png" sizes="20" alt="로고"></a>
             <a href="/park/main.do" class="_link"><img src="/img/minsome_s_person.png" sizes="20" alt="로고"></a>
             <a href="/park/main.do" class="_link"><img src="/img/minsome_s_m.png" sizes="20" alt="로고"></a>
             <ul class="nav">
