--- a/javaTeam/src/main/resources/templates/search/search.html
+++ b/javaTeam/src/main/resources/templates/search/search.html
@@ -134,7 +134,7 @@
         {outline:2px solid #0085FF;}
 
         #img {
-            padding-top: 50px;
+            padding-top: 390px;
             position : absolute;
             width: 60px;
             height: 60px;
@@ -151,11 +151,15 @@
 
 <!-- 헤더 -->
 <div th:replace="~{/layout/header :: header-basic}"></div>
+
+
 <main id="main_body" class="container mt-5 justify-flex-center">
     <div class="search">
+        <img src="/img/grouprun.png">
+        
     <form  name="search-form" method="get" autocomplete="off">
             <input id="input" type="text" name="keyword" placeholder="Search Something">
-        <button type="button" onclick="getSearchList()"><img id="img" src="/img/minsome_person.png"></button>
+        <button type="button" onclick="getSearchList()"><img id="img" src="/img/runsearch_s_2.png"></button>
 
                 </form>
             </div>
