--- a/javaTeam/src/main/resources/templates/search/search.html
+++ b/javaTeam/src/main/resources/templates/search/search.html
@@ -95,11 +95,16 @@
         }
 
         .card-content {
-            padding: 10px;
+
+
         }
 
         .card-title {
-            font-size: 18px;
+            text-align: center;
+            margin-bottom: 3px;
+
+            font-size: 25px;
+            color: #0085FF;
             font-weight: bold;
         }
 
