점심전 수정

--- a/javaTeam/src/main/resources/templates/park/parkMain.html
+++ b/javaTeam/src/main/resources/templates/park/parkMain.html
@@ -10,22 +10,24 @@
     <title>MINSOME</title>
     <!-- 폰트연결 -->
     <link href="https://webfontworld.github.io/pretendard/Pretendard.css" rel="stylesheet">
+
     <script
             src="https://code.jquery.com/jquery-3.7.1.js"
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
             crossorigin="anonymous"></script>
+
     <!-- aos css -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- css 연결 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/css/sub1.css">
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script><!-- 수정X -->
-
-    <!-- js -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+      <!-- js -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script><!-- aos 라이브러리 -->
     <script src="/js/aos.js"></script><!-- aos 소스 -->
     <script src="/js/sub.js"></script>
     <script src="/js/script.js"></script>
+    <script src="/js/logout.js"></script>
     <style>
         /*.nav {width: 100%;}*/
         .nav li {position: relative; color: transparent; font-size: 30px; margin: 50px; -webkit-text-stroke: 1px black; transition: all .5s;}
