--- a/javaTeam/src/main/resources/templates/search/search.html
+++ b/javaTeam/src/main/resources/templates/search/search.html
@@ -26,7 +26,7 @@
     <script src="/js/aos.js"></script><!-- aos 소스 -->
     <script src="/js/sub.js"></script>
     <script src="/js/script.js"></script>
-
+    <script src="/js/logout.js"></script>
 
 
 
@@ -48,7 +48,7 @@
                         result.forEach(function (item) {
                             var card = `
                                <article class="card">
-            <img class="card-image" src="/img/img.png" alt="카드 이미지">
+            <img class="card-image" src="/img/park/${item.imgUrl}/${item.imgName}.jpg" alt="카드 이미지">
             <div class="card-content">
                 <h2 class="card-title">${item.name}</h2>
             </div>
