--- a/javaTeam/src/main/resources/static/css/sub1.css
+++ b/javaTeam/src/main/resources/static/css/sub1.css
@@ -20,7 +20,22 @@ body {
     color: #333;
     min-width: 1320px;
 }
+.btn_out{
+    margin-left: 15px;
+    color: #000;
+    background-color:white;
+    border: none;
 
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+}
+.btn_out:hover {
+    background-color: #0085FF;
+    box-shadow: 0px 15px 20px rgba(0, 136, 255, 0.4);
+    color: #fff;
+}
 
 .top {
 
@@ -107,13 +122,21 @@ header {
 }
 
 .header_top a {
-    display: block;
-    margin-left: 20px;
-    color: #7c7c7c;
+    margin-left: 15px;
+    color: #000;
+    background-color:white;
+    border: none;
+
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
 }
 
 .header_top a:hover {
-    color: #00B2BC;
+    background-color: #0085FF;
+    box-shadow: 0px 15px 20px rgba(0, 136, 255, 0.4);
+    color: #fff;
 
 }
 
