--- a/javaTeam/src/main/resources/templates/layout/header.html
+++ b/javaTeam/src/main/resources/templates/layout/header.html
@@ -18,6 +18,7 @@
 <body>
 
 <header th:fragment="header-basic">
+
         <div class="header_in">
             <ul class="header_top" th:if="${session.id} == null">
                 <li><a href="/login/login.do">Login</a></li>
@@ -29,7 +30,7 @@
                 <li class="p_user"><p th:text="${session.nickName} +'님'"></p></li>
                 <li class="p_user"><p>반갑습니다.</p></li>
                 <li><a href="/mypage/mypage" th:href="@{/mypage/mypage}">MYPage</a></li>
-                <li><a href="/login/logout.do">Logout</a></li>
+                <li><button id="logout_btn" class="btn_out" type="button">Logout</button></li>
 
 
             </ul>
@@ -99,6 +100,7 @@
 
             </ul>
         </div>
+
 
 </header>
 </body>
