--- a/javaTeam/src/main/resources/templates/board/shotboard/shotBoardInsert.html
+++ b/javaTeam/src/main/resources/templates/board/shotboard/shotBoardInsert.html
@@ -22,7 +22,7 @@
     <section>
         <div>
             <div>
-                <form action="/board/insert" th:action="@{/board/insert}" method="post">
+                <form action="/board/insert" th:action="@{/board/insert}" method="post" enctype="multipart/form-data">
                     <div>
                         <label for="title" class="form-label">제목 : </label>
                         <input type="text" class="form-control" id="title" name="title" placeholder="제목을 입력하세요">
@@ -39,10 +39,17 @@
                         <label for="cm-nick" class="form-label">작성자 닉넴 : </label>
                         <input type="text" class="form-control" id="cm-nick" name="cmNick" placeholder="닉네임을 입력하세요">
                     </div>
+                    <div class="mt-3">
+                        <label for="file" class="form-label">첨부파일 </label>
+
+                        <input type="file" class="form-control" id="file" name="file" multiple>
+                    </div>
+
                     <div>
                         <button type="submit" class="btn btn-primary">등록하기</button>
                         <button type="reset" class="btn btn-secondary">취소하기</button>
                     </div>
+
                 </form>
             </div>
         </div>
