--- a/javaTeam/src/main/resources/templates/board/shotboard/shotBoardList.html
+++ b/javaTeam/src/main/resources/templates/board/shotboard/shotBoardList.html
@@ -15,48 +15,108 @@
 
     <title>Title</title>
 </head>
+<style>
+
+    #main_body{
+        min-height: 1000px;
+        margin: auto;
+        width: 1800px;
+
+    }
+    .card-container {
+
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 50px; /* 카드 간의 간격 조정 (선택사항) */
+
+    }
+    .card {
+        width: 400px;
+        height: 300px;
+        margin: 10px;
+        border-radius: 20px;
+
+        box-shadow: 0 0 5px #ccc;
+    }
+
+    .card-image {
+        border-top-right-radius: 10px;
+        border-top-left-radius: 10px;
+
+        width: 100%;
+        height: 250px;
+    }
+
+    .card-content {
+
+
+    }
+
+    .card-title {
+        text-align: center;
+        margin-bottom: 3px;
+
+        font-size: 25px;
+        color: #0085FF;
+        font-weight: bold;
+    }
+
+    .card-text {
+        font-size: 16px;
+    }
+
+    .search {
+
+        margin: 0 auto;
+        padding-top: 50px;
+        position: relative;
+        width: 800px;
+        text-align: center; /* 검색창 내용 정렬을 중앙으로 */
+    }
+
+    input {
+
+        width: 100%;
+        height: 50px;
+        border: 1px solid skyblue;
+        border-radius: 50px;
+        padding: 10px 12px;
+        font-size: 22px;
+        font-style: italic;
+        font-family: 'FontAwesome', sans-serif;
+
+    }
+
+    input:focus
+
+    {outline:2px solid #0085FF;}
+
+    #img {
+        padding-top: 390px;
+        position : absolute;
+        width: 60px;
+        height: 60px;
+        top: 11px;
+        right: 1px;
+
+    }
+</style>
 <body>
 
 <div th:replace="~{/layout/header :: header-basic}"></div>
 <main>
     <section>
         <div>
-            <div>
-                <table>
-                    <colgroup>
-                        <col style="width: 10%">
-                        <col style="width: 50%">
-                        <col style="width: 15%">
-                        <col style="width: 20%">
-                        <col style="width: 5%">
-                    </colgroup>
-                    <thead>
-                    <tr>
-                        <th>번호</th>
-                        <th>제목</th>
-                        <th>작성자</th>
-                        <th>등록시간</th>
-                        <th>조회수</th>
+                <div class="card-container"  >
+                    <article class="card " th:if="${#lists.size(PageList.getList())} > 0" th:each="item : ${PageList.getList()}">
+                        <img class="card-image" th:src="${item.imgUrl}" alt="카드 이미지">
+                        <div class="card-content">
+                            <p th:text="${item.postdate}"></p>
+                            <h2 class="card-title" th:text="${item.title}"></h2>
+                        </div>
+                    </article>
+                </div>
 
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:if="${#lists.size(PageList.getList())} > 0" th:each="item : ${PageList.getList()}">
-                        <td th:text="${item.cmIdx}">번호</td>
-                        <td>
-                            <a href="/board/" th:href="@{|/board/${item.cmIdx}|}" th:text="${item.title}">제목</a>
-                        </td>
-                        <td><img th:src="${item.imgUrl}"> </td>
-                        <td th:text="${item.cmNick}">작성자</td>
-                        <td th:text="${item.postdate}">등록시간</td>
-                        <td th:text="${item.visitCount}">조회수</td>
-                    </tr>
-                    <tr th:unless="${#lists.size(PageList.getList())} > 0">
-                        <td colspan="5">조회된 내용이 없습니다.</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
         </div>
         <div class="mt-3">
             <ul class="pagination justify-content-center">
