--- a/javaTeam1/src/main/resources/templates/board/shotboard/shotBoardDetail.html
+++ b/javaTeam1/src/main/resources/templates/board/shotboard/shotBoardDetail.html
@@ -64,8 +64,8 @@
                 <p th:text="${board.getTitle()}"></p>
                 <img class="ms-2 me-1" src="/img/minsome_m.png">
                 <a th:text="by + ${board.getCmNick()}"> </a>
-                <span class="ms-1" th:text="조회 + ${board.getVisitCount()}"></span>
-                <span class="ms-1" th:text="작성일 + ${board.getPostdate()}"></span>
+                <span class="ms-1" th:text="'조회&nbsp;&nbsp;'+  ${board.getVisitCount()}"></span>
+                <span class="ms-1" th:text="'작성일&nbsp;&nbsp;' + ${board.getPostdate()}"></span>
             </div>
             <div class="text-content">
                 <img class="card-image" th:src="${board.getImgUrl()}" alt="카드 이미지" onerror="this.src='/img/alt.jpg'">
