--- a/javaTeam1/src/main/resources/templates/layout/header.html
+++ b/javaTeam1/src/main/resources/templates/layout/header.html
@@ -70,7 +70,7 @@
                     </div>
 
                 </li>
-                <li><a href="#">커뮤니티</a>
+                <li class="a_menu"><a href="#">커뮤니티</a>
                     <div class="sub"> <!--배경색-->
                         <div class="sub_in"> <!--가운데 창-->
                             <ul class="menu1">
