--- a/javaTeam1/src/main/resources/templates/layout/header.html
+++ b/javaTeam1/src/main/resources/templates/layout/header.html
@@ -81,8 +81,8 @@
                             </ul>
 
                             <ul class="menu3">
-                                <li><a href="#">민소메이트</a></li>
-                                <li><a href="/board">인증게시판</a></li>
+                                <li><a href="#">메이트</a></li>
+                                <li><a href="/board">인증</a></li>
                                 <li><a href="#">아이템</a></li>
                             </ul>
                         </div>
