--- a/javaTeam1/src/main/resources/templates/login/register.html
+++ b/javaTeam1/src/main/resources/templates/login/register.html
@@ -84,7 +84,6 @@
     }
 </style>
 <body class="d-flex justify-content-center">
-
 <div style="width: 400px">
     <form action="/login/registerProcess"  method="post" >
         <a href="/main/minsome"><img src="/img/minsome_s_person.png" sizes="15" alt="로고"></a>
@@ -93,20 +92,20 @@
 
         <h2 class="text-center">회원가입</h2>
         <div>
-            <label for="id">ID</label>
-            <input type="text" id="id" name="id" required>
+            <label for="id"></label>
+            <input type="text" id="id" name="id" placeholder="ID" required>
         </div>
         <div>
-            <label for="password">PW</label>
-            <input type="password" id="password" name="password" required>
+            <label for="password"></label>
+            <input type="password" id="password" name="password" placeholder="PW" required>
         </div>
         <div>
-            <label for="name">NAME</label>
-            <input type="text" id="name" name="name" required>
+            <label for="name"></label>
+            <input type="text" id="name" name="name" placeholder="NAME" required>
         </div>
         <div>
-            <label  for="nickName" >NickName</label>
-            <input type="text" id="nickName" name="nickName" required>
+            <label  for="nickName"></label>
+            <input type="text" id="nickName" name="nickName" placeholder="NickName" required>
         </div>
         <div>
             <button type="submit" class="btn btn-primary form-control">Register</button>
