--- a/javaTeam1/src/main/resources/static/css/board/boardList.css
+++ b/javaTeam1/src/main/resources/static/css/board/boardList.css
@@ -48,7 +48,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     font-size: 20px;
-  font-weight: bold;
+    font-weight: bold;
     color: black;
     font-weight: bold;
 }
@@ -79,6 +79,25 @@
 .c_nick .view{
 
     border: none;
+    width: 30px;
+    height: 30px;
+}
+
+.m_nick {
+    font-size: 15px;
+    font-weight: bold;
+    border-top:  1px  solid #ddd; overflow: hidden;
+    height: 80px;
+}
+
+.m_body{
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.m_nick img{
+    border:  1px  solid grey; ;
+    border-radius: 30px;
     width: 30px;
     height: 30px;
 }
