--- a/javaTeam1/src/main/resources/templates/board/adminboard/userList.html
+++ b/javaTeam1/src/main/resources/templates/board/adminboard/userList.html
@@ -11,6 +11,7 @@
             crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="/css/sub1.css">
+    <script src="/js/sub.js"></script>
 
     <style>
         body {
