--- a/javaTeam1/src/main/resources/templates/board/shotboard/shotBoardUpdate.html
+++ b/javaTeam1/src/main/resources/templates/board/shotboard/shotBoardUpdate.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta charset="utf-8">    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="/img/minsome_m_favicon.png" rel="icon" type="image/png" sizes="32x32" ><!--파비콘-->
-
-    <meta name="viewport" content="width=1400"><!--다른 매체에서도 너비 오류 없이 볼 수 있게-->
-
-
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+            crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-
-
-
-    <script src="/js/aos.js"></script><!-- aos 소스 -->
-
-    <script src="/js/insert.js"></script>
-    <!--    추가-->
+    <link rel="stylesheet" href="/css/sub1.css">
+    <script src="/js/logout.js"></script>
+    <link rel="stylesheet" href="/css/board/boardDetail.css">
     <link rel="stylesheet" href="/css/sub1.css">
     <link rel="stylesheet" href="/css/board/board.css">
     <script src="/js/sub.js"></script>
     <script src="/js/logout.js"></script>
+    <script src="/js/update.js"></script>
 
     <!-- include summernote css/js-->
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 
+
+
     <title>Title</title>
+
+    <script>
+        $(document).ready(function () {
+
+            $("#btn-update").on("click", function () {
+                const frm = $("#frm")[0];
+                frm.action = "/board/update";
+                frm.submit();
+            });
+        })
+    </script>
 </head>
 <body>
 
@@ -78,7 +84,7 @@
                 </select>
             </div>
             <div class="title mt-2 mb-4">
-                <input type="text" class="underline" id="title" name="title" placeholder="제목을 입력하세요">
+                <input type="text" class="underline" id="title" name="title"  th:placeholder="${board.getTitle()}" >
             </div>
 
             <div class="pt-2">
@@ -93,9 +99,10 @@
 
             <div class="d-flex justify-content-end mt-4">
                 <button type="button" id="btn-cancel" class="btn btn-secondary me-2">취소</button>
-                <button type="button" id="btn-insert" class="btn btn-primary">등록</button>
+                <button type="button" id="btn-update" class="btn btn-primary">수정</button>
 
             </div>
+            <input type="hidden" id="method" name="_method">
 
         </form>
 
@@ -105,5 +112,4 @@
 
 <div th:replace="~{/layout/footer :: footer-basic}"></div>
 </body>
-
 </html>
