--- a/javaTeam1/src/main/resources/templates/login/login.html
+++ b/javaTeam1/src/main/resources/templates/login/login.html
@@ -14,6 +14,7 @@
     <meta charset="UTF-8">
     <title>MINSOME</title>
     <link href="/img/minsome_m_favicon.png" rel="icon" type="image/png" sizes="32x32" ><!--파비콘-->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -29,12 +30,86 @@
 
     <!-- js -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="/js/aos.js"></script>
+<!--    <script src="/js/aos.js"></script>-->
     <script src="/js/sub.js"></script>
     <script src="/js/script.js"></script>
 
 
     <style>
+        main {
+            align-content: center;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        div {
+            position: relative;
+            width: 300px;
+            margin: 100px auto;
+        }
+
+        input {
+            font-size: 25px;
+            color: #333333;
+            width: 300px;
+            border: none;
+            border-bottom: solid #aaaaaa 1px;
+            padding-bottom: 10px;
+            padding-left: 10px;
+            position: relative;
+            background: none;
+            z-index: 5;
+        }
+
+        span {
+            display: block;
+            position: absolute;
+            bottom: 0;
+            left: 0%;  /* right로만 바꿔주면 오 - 왼 */
+            background-color: #666;
+            width: 0;
+            height: 2px;
+            border-radius: 2px;
+            transition: 0.5s;
+        }
+
+        label {
+            position: absolute;
+            color: #aaa;
+            left: 10px;
+            font-size: 20px;
+            bottom: 8px;
+            transition: all .2s;
+        }
+
+        input:focus ~ label, input:valid ~ label {
+            font-size: 16px;
+            bottom: 40px;
+            color: #666;
+            font-weight: bold;
+        }
+
+        input:focus ~ span, input:valid ~ span {
+            width: 100%;
+        }
+
+        #login_form {
+            align-items: center;
+        }
+
+        .logo_area{
+            width: 500px;
+            height: 250px;
+            margin-left: 20px;
+        }
+
+        .row{
+            margin: 0 auto;
+        }
 
     </style>
 
@@ -42,28 +117,36 @@
 
     </script>
 
-
 </head>
 <body>
 <div th:replace="~{/layout/header :: header-basic}"></div>
 
 
 <main class="container mt-5">
-    <img id="loginLogo" src="/img/loginLogo.png">
-    <section>
-
+    <div>
+        <div>
+            <img class="logo_area"  src="/img/loginLogo.png">
+        </div>
 
         <div class="row">
             <div class="col-sm-4 mx-auto">
                 <form id="login_form" action="/login/LoginProcess" method="post">
-                    <div class="my-3 form-floating">
-                        <input type="text" class="form-control" id="id" name="id" placeholder="아이디를 입력하세요.">
-                        <label for="id">아이디를 입력하세요.</label>
+                    <div>
+                        <label for="id"></label>
+                        <input type="text" id="id" name="id" placeholder="ID" required>
                     </div>
-                    <div class="my-3 form-floating">
-                        <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호를 입력하세요.">
-                        <label for="password">비밀번호를 입력하세요.</label>
+                    <div>
+                        <label for="password"></label>
+                        <input type="password" id="password" name="password" placeholder="PW" required>
                     </div>
+<!--                    <div class="my-3 form-floating">-->
+<!--                        <input type="text" class="form-control" id="id" name="id" placeholder="아이디를 입력하세요.">-->
+<!--                        <label for="id">아이디를 입력하세요.</label>-->
+<!--                    </div>-->
+<!--                    <div class="my-3 form-floating">-->
+<!--                        <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호를 입력하세요.">-->
+<!--                        <label for="password">비밀번호를 입력하세요.</label>-->
+<!--                    </div>-->
                     <div class="my-3 d-grid">
                         <button type="submit"  style="background-color: #0085FF" class="btn ">로그인</button>
                         <!--                        민소매 테마색 : #0085FF-->
@@ -74,9 +157,9 @@
                 </form>
             </div>
         </div>
-    </section>
-</main>
 
+    </div>
+</main>
 
 
 <div th:replace="~{/layout/footer :: footer}"></div>
