--- a/update/src/main/resources/templates/board/mateBoard/mateBoardList.html
+++ b/update/src/main/resources/templates/board/mateBoard/mateBoardList.html
@@ -34,7 +34,7 @@
         }
 
         th {
-            background-color: #ff8c94; /* 분홍색 헤더 배경 */
+            background-color: #4e8cff; /* 분홍색 헤더 배경 */
             color: white; /* 어두운 글자색으로 변경 */
             padding: 15px; /* 위아래 여백을 늘림 */
             font-size: 17px;
