--- a/update/src/main/resources/templates/board/adminboard/userPost.html
+++ b/update/src/main/resources/templates/board/adminboard/userPost.html
@@ -41,17 +41,18 @@
                     <thead class="thead-dark"> <!-- Bootstrap 다크 테이블 헤더 클래스 추가 -->
                     <tr>
                         <th>ID</th>
+                        <th>닉네임</th>
                         <th>제목</th>
                         <th>작성일자</th>
-                        <th>닉네임</th>
+
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:if="${#lists.size(PageList.getList())} > 0" th:each="item : ${PageList.getList()}">
                         <td th:text="${item.cmId}">ID</td>
+                        <td th:text="${item.cmNick}">닉네임</td>
                         <td th:text="${item.title}">제목</td>
                         <td th:text="${item.postdate}">작성일자</td>
-                        <td th:text="${item.cmNick}">닉네임</td>
                     </tr>
                     <tr th:unless="${#lists.size(PageList.getList())} > 0">
                         <td colspan="4">조회된 내용이 없습니다.</td> <!-- 셀 병합 수를 4로 수정 -->
@@ -72,6 +73,11 @@
                     <a class="page-link" href="#" th:href="@{/admin/userPost(pageNum=${PageList.getNextPage()})}">&raquo;</a>
                 </li>
             </ul>
+        </div>
+        <div class="row mt-3">
+            <div class="col-sm d-flex justify-content-end" style="padding-bottom: 20px">
+                <a href="/admin" th:href="@{/admin}" class="btn btn-primary">회원 목록</a>
+            </div>
         </div>
     </section>
 </main>
