--- a/update/src/main/resources/templates/search/search.html
+++ b/update/src/main/resources/templates/search/search.html
@@ -33,6 +33,9 @@
 
 
 <script>
+
+
+
     function getSearchList(){
 
             $.ajax({
@@ -165,7 +168,7 @@
         
     <form  name="search-form" method="get" autocomplete="off">
             <input id="input" type="text" name="keyword" placeholder="Search Something">
-        <button type="button" onclick="getSearchList()"><img id="img" src="/img/runsearch_s_2.png"></button>
+        <button id="btn_on" type="button" onclick="getSearchList()"><img id="img" src="/img/runsearch_s_2.png"></button>
 
                 </form>
             </div>
