뷰 동작 확인

--- a/update/src/main/resources/templates/board/shotboard/shotBoardList.html
+++ b/update/src/main/resources/templates/board/shotboard/shotBoardList.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/sub1.css">
     <link rel="stylesheet" href="/css/board/boardList.css">
     <script src="/js/logout.js"></script>
+    <script src="/js/sub.js"></script>
 
     <title>Title</title>
 </head>
