--- a/update/src/main/resources/templates/layout/header.html
+++ b/update/src/main/resources/templates/layout/header.html
@@ -51,13 +51,13 @@
                     </div>
 
                 </li>
-                <li><a href="#">런런!</a>
+                <li><a href="/search/search">런런!</a>
                     <div class="sub"> <!--배경색-->
                         <div class="sub_in"> <!--가운데 창-->
                             <ul class="menu1">
 
                             </ul>  <ul class="menu2">
-                                <li><a href="#">런런</a></li>
+                                <li><a href="/search/search">런런</a></li>
                                 <li><a href="#">부산런</a></li>
                                 <li><a href="#">전국런</a></li>
                             </ul>
@@ -81,7 +81,7 @@
                             </ul>
 
                             <ul class="menu3">
-                                <li><a href="#">메이트</a></li>
+                                <li><a href="/mate">메이트</a></li>
                                 <li><a href="/board">인증</a></li>
                                 <li><a href="#">아이템</a></li>
                             </ul>
