--- a/update/src/main/resources/templates/login/register.html
+++ b/update/src/main/resources/templates/login/register.html
@@ -38,7 +38,7 @@
     }
 
     input {
-        font-size: 25px;
+        font-size: 20px;
         color: #333333;
         width: 300px;
         border: none;
@@ -110,7 +110,7 @@
         <div>
             <button type="submit" class="btn btn-primary form-control">Register</button>
 
-            <a class="m-5" href="/login/login.do">Back to Home</a>
+            <a  class="d-flex justify-content-end" href="/login/login.do">Back to Home</a>
         </div>
 
     </form>
