--- a/update/src/main/resources/templates/search/search.html
+++ b/update/src/main/resources/templates/search/search.html
@@ -147,7 +147,7 @@
             position : absolute;
             width: 60px;
             height: 60px;
-            top: 11px;
+            top: 0px;
             right: 1px;
 
         }
@@ -164,7 +164,7 @@
 
 <main id="main_body" class="container mt-5 justify-flex-center">
     <div class="search">
-        <img src="/img/grouprun.png">
+        <img src="/img/nightRun2.png">
         
     <form  name="search-form" method="get" autocomplete="off">
             <input id="input" type="text" name="keyword" placeholder="Search Something">
@@ -177,6 +177,33 @@
 
     <div class="card-container">
 
+        <a href="/search/detail/1">
+            <article class="card">
+                <img class="card-image" src="/img/park/중앙공원/중앙공원1.jpg" alt="카드 이미지">
+                <div class="card-content">
+                    <h2 class="card-title">중앙공원</h2>
+                </div>
+            </article></a>
+        <a href="/search/detail/2">
+            <article class="card">
+                <img class="card-image" src="/img/park/암남공원/암남공원2.jpg" alt="카드 이미지">
+                <div class="card-content">
+                    <h2 class="card-title">암남공원</h2>
+                </div>
+            </article></a>  <a href="/search/detail/3">
+        <article class="card">
+            <img class="card-image" src="/img/park/증산공원/증산공원1.jpg" alt="카드 이미지">
+            <div class="card-content">
+                <h2 class="card-title">증산공원</h2>
+            </div>
+        </article></a>
+        <a href="/search/detail/4">
+        <article class="card">
+            <img class="card-image" src="/img/park/가족체육공원/가족체육공원1.jpg" alt="카드 이미지">
+            <div class="card-content">
+                <h2 class="card-title">가족체육공원</h2>
+            </div>
+        </article></a>
     </div>
 </main>
 
