--- a/update/src/main/resources/templates/board/shotboard/shotBoardDetail.html
+++ b/update/src/main/resources/templates/board/shotboard/shotBoardDetail.html
@@ -12,43 +12,82 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="/css/sub1.css">
     <script src="/js/logout.js"></script>
+    <script src="/js/sub.js"></script>
     <script src="/js/board/detailBoard.js"></script>
     <link rel="stylesheet" href="/css/board/boardDetail.css">
 
 
     <title>Title</title>
+    <style>
+        .re_date{
+            margin-right: 100px;
+        }
+        #btn_del{
+            background-color: white;
+            border: none;
+        }
+        .title1 img{
+            width: 300px;
+            height: 200px;
+        }
+    </style>
 </head>
 <body>
+<script>
+$(document).ready(function (){
+   $("#btn_update").on("click", function (){
+        const nickname = $("#Nick_input").val();
+        const postNick = $("#postNick").val();
+        var cmIdx  =$("#cmIdx").val();
+
+       if(nickname===postNick){
+            location.href="/board/update/"+cmIdx;
+       }else {
+           alert("작성자만 수정이 가능합니다.");
+       }
+
+   });
+
+
+});
+</script>
 <div th:replace="~{/layout/header :: header-basic}"></div>
 <main class="container mt-5">
     <div class="title1">
-        <h1>MINSOME</h1>
+        <img class="ms-2 me-1" src="/img/boardImg3.png">
     </div>
     <section class="section_div">
 
+        <button style="float: right" id="btn_update" class="btn btn-primary">수정</button>
 
-
-            <div class="btn_area d-flex justify-content-between mb-4">
-                <button type="button" class="btn btn-primary">목록</button>
-                <button type="button" class="btn btn-primary">수정</button>
+            <div class="btn_area d-flex justify-content-between mb-4" th:if="${board.getCmNum()==0}">
+                <a href="/board" id="btn_list" class="btn btn-primary">목록</a>
             </div>
+        <div class="btn_area d-flex justify-content-between mb-4" th:unless="${board.getCmNum()==0}">
+            <a href="/mate" id="btn_list1" class="btn btn-primary">목록</a>
+
+        </div>
+
             <div class="mb-2" th:if="${board.getCmNum()}==0">
                 <a class="a_board" href="/board">인증게시판</a>
+
+
             </div>
             <div class="mb-2" th:unless="${board.getCmNum()}==0">
-                <a class="a_board" href="/mate">런닝메이트</a>
+                <a class="a_board" href="/mate">민소메이트</a>
+
             </div>
             <div class="inform">
                 <p th:text="${board.getTitle()}"></p>
-                <img class="ms-2 me-1" src="/img/minsome_m.png">
-                <a th:text="by + ${board.getCmNick()}"> </a>
+                <img class="ms-2 me-1" src="/img/boardImg.png">
+                <a id="nick_inform" th:text="by + ${board.getCmNick()}" th:value="${board.getCmNick()}"> </a>
                 <span class="ms-1" th:text="'조회&nbsp;&nbsp;'+  ${board.getVisitCount()}"></span>
                 <span class="ms-1" th:text="'작성일&nbsp;&nbsp;' + ${board.getPostdate()}"></span>
             </div>
             <div class="text-content">
                 <img class="card-image" th:src="${board.getImgUrl()}" alt="카드 이미지" onerror="this.src='/img/alt.jpg'">
 
-                <p class="mt-5" th:text="${board.getContent()}"></p>
+                <p class="mt-5" th:utext="${board.getContent()}"></p>
             </div>
 
 
@@ -69,6 +108,7 @@
             <input type="hidden" th:value="${board.getCmIdx()}" id="cmIdx">
             <textarea rows="5" id="content" name="content" style="width: 100%" placeholder="자신의 의견을 간단히 적어주세요."></textarea>
             <input type="hidden" th:value="${session.nickName}" id="Nick_input">
+            <input type="hidden" th:value="${board.getCmNick()}" id="postNick">
             <button style="float: right" type="button" id="btn_review">등록</button>
 
         </div>
