--- a/update/src/main/resources/templates/board/shotboard/shotBoardUpdate.html
+++ b/update/src/main/resources/templates/board/shotboard/shotBoardUpdate.html
@@ -55,7 +55,12 @@
     </div>
     <section class="section_div">
 
-
+        <span   th:if="${board.getCmNum()==0}">
+            <a href="/board" style="float: right" class="btn btn-primary">목록</a>
+        </span>
+        <span th:unless="${board.getCmNum()==0}">
+            <a href="/mate" style="float: right" class="btn btn-primary">목록</a>
+        </span>
         <form id="frm" method="post" enctype="multipart/form-data">
             <div class="row justify-content-start mb-2">
                 <div class="col-2">
@@ -66,6 +71,8 @@
                                    value="test1" th:value="${session.id}">
                             <label for="cm-id">작성자ID</label>
                         </div>
+
+
                     </div>
                 </div>
                 <div class="col-2">
@@ -92,6 +99,7 @@
             </div>
             <div class="title mt-2 mb-4">
                 <input type="text" class="underline" id="title" name="title"  th:placeholder="${board.getTitle()}" >
+                <input type="hidden" th:value="${board.getCmIdx()}" name="cmIdx">
             </div>
 
             <div class="pt-2">
@@ -105,7 +113,7 @@
             </div>
 
             <div class="d-flex justify-content-end mt-4">
-                <button type="button" id="btn-cancel" class="btn btn-secondary me-2">취소</button>
+
                 <button type="button" id="btn-delete" class="btn btn-danger me-2">삭제</button>
                 <button type="button" id="btn-update" class="btn btn-primary">수정</button>
 
