--- a/update/src/main/resources/templates/login/login.html
+++ b/update/src/main/resources/templates/login/login.html
@@ -1,168 +1,116 @@
-<!---->
-<!--Created by IntelliJ IDEA.-->
-<!--User: it-->
-<!--Date: 2023-11-07-->
-<!--Time: 오전 10:08-->
-<!--To change this template use File | Settings | File Templates.-->
-<!---->
-<!--<%@ page contentType="text/html;charset=UTF-8" pageEncoding="UTF-8" %>-->
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-
     <meta charset="UTF-8">
-    <title>MINSOME</title>
-    <link href="/img/minsome_m_favicon.png" rel="icon" type="image/png" sizes="32x32" ><!--파비콘-->
-
+    <title>Join</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
-    <!-- aos css -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- css 연결 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/css/sub1.css">
-    <link rel="stylesheet" href="/css/login.css">
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-
-    <!-- js -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<!--    <script src="/js/aos.js"></script>-->
-    <script src="/js/sub.js"></script>
-    <script src="/js/script.js"></script>
-
-
-    <style>
-        main {
-            align-content: center;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        div {
-            position: relative;
-            width: 300px;
-            margin: 100px auto;
-        }
-
-        input {
-            font-size: 25px;
-            color: #333333;
-            width: 300px;
-            border: none;
-            border-bottom: solid #aaaaaa 1px;
-            padding-bottom: 10px;
-            padding-left: 10px;
-            position: relative;
-            background: none;
-            z-index: 5;
-        }
-
-        span {
-            display: block;
-            position: absolute;
-            bottom: 0;
-            left: 0%;  /* right로만 바꿔주면 오 - 왼 */
-            background-color: #666;
-            width: 0;
-            height: 2px;
-            border-radius: 2px;
-            transition: 0.5s;
-        }
-
-        label {
-            position: absolute;
-            color: #aaa;
-            left: 10px;
-            font-size: 20px;
-            bottom: 8px;
-            transition: all .2s;
-        }
-
-        input:focus ~ label, input:valid ~ label {
-            font-size: 16px;
-            bottom: 40px;
-            color: #666;
-            font-weight: bold;
-        }
-
-        input:focus ~ span, input:valid ~ span {
-            width: 100%;
-        }
-
-        #login_form {
-            align-items: center;
-        }
-
-        .logo_area{
-            width: 500px;
-            height: 250px;
-            margin-left: 20px;
-        }
-
-        .row{
-            margin: 0 auto;
-        }
-
-    </style>
-
-    <script>
-
-    </script>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
-<body>
-<div th:replace="~{/layout/header :: header-basic}"></div>
+<script>
+    var myModal = document.getElementById('myModal')
+    var myInput = document.getElementById('myInput')
+
+    myModal.addEventListener('shown.bs.modal', function () {
+        myInput.focus()
+    })
+</script>
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    div {
+        position: relative;
+        width: 300px;
+        margin-left: 50px;
+        margin-top: 100px;
+    }
+
+    input {
+        font-size: 20px;
+        color: #333333;
+        width: 300px;
+        border: none;
+        border-bottom: solid #aaaaaa 1px;
+        padding-bottom: 10px;
+        padding-left: 10px;
+        position: relative;
+        background: none;
+        z-index: 5;
+    }
 
 
-<main class="container mt-5">
-    <div>
+    span {
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 0%;  /* right로만 바꿔주면 오 - 왼 */
+        background-color: #666;
+        width: 0;
+        height: 2px;
+        border-radius: 2px;
+        transition: 0.5s;
+    }
+
+    label {
+        position: absolute;
+        color: #aaa;
+        left: 10px;
+        font-size: 20px;
+        bottom: 8px;
+        transition: all .2s;
+    }
+
+    input:focus ~ label, input:valid ~ label {
+        font-size: 16px;
+        bottom: 40px;
+        color: #666;
+        font-weight: bold;
+    }
+    #login img{
+        width: 400px;
+
+    }
+
+    input:focus ~ span, input:valid ~ span {
+        width: 100%;
+    }
+</style>
+<body class="d-flex justify-content-center">
+<div style="width: 400px">
+    <form action="/login/LoginProcess"  method="post" >
+        <a id="login" href="/main/minsome"><img  src="/img/loginLogo.png" sizes="15" alt="로고"></a>
+
+
+
         <div>
-            <img class="logo_area"  src="/img/loginLogo.png">
+            <label for="id"></label>
+            <input type="text" id="id" name="id" placeholder="ID" required>
+        </div>
+        <div>
+            <label for="password"></label>
+            <input type="password" id="password" name="password" placeholder="PW" required>
         </div>
 
-        <div class="row">
-            <div class="col-sm-4 mx-auto">
-                <form id="login_form" action="/login/LoginProcess" method="post">
-                    <div>
-                        <label for="id"></label>
-                        <input type="text" id="id" name="id" placeholder="ID" required>
-                    </div>
-                    <div>
-                        <label for="password"></label>
-                        <input type="password" id="password" name="password" placeholder="PW" required>
-                    </div>
-<!--                    <div class="my-3 form-floating">-->
-<!--                        <input type="text" class="form-control" id="id" name="id" placeholder="아이디를 입력하세요.">-->
-<!--                        <label for="id">아이디를 입력하세요.</label>-->
-<!--                    </div>-->
-<!--                    <div class="my-3 form-floating">-->
-<!--                        <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호를 입력하세요.">-->
-<!--                        <label for="password">비밀번호를 입력하세요.</label>-->
-<!--                    </div>-->
-                    <div class="my-3 d-grid">
-                        <button type="submit"  style="background-color: #0085FF" class="btn ">로그인</button>
-                        <!--                        민소매 테마색 : #0085FF-->
-                    </div>
-                    <div class="my-3 d-flex justify-content-end">
-                        <a th:href="@{/login/register}" class="btn btn-link text-info" style="color: #0085FF">회원 가입</a>
-                    </div>
-                </form>
-            </div>
+        <div>
+            <button type="submit" class="btn btn-primary form-control">Login</button>
+
+            <a class="d-flex justify-content-end" href="/login/register" style="font-size: 20px">Register</a>
         </div>
 
-    </div>
-</main>
-
-
-<div th:replace="~{/layout/footer :: footer}"></div>
-
+    </form>
+</div>
 </body>
+
 </html>
