--- a/update/src/main/resources/templates/mypage/mypage.html
+++ b/update/src/main/resources/templates/mypage/mypage.html
@@ -9,147 +9,131 @@
     <meta name="viewport" content="width=1400"><!--다른 매체에서도 너비 오류 없이 볼 수 있게-->
     <title>마이페이지</title>
     <!-- 폰트연결 -->
-    <link href="https://webfontworld.github.io/pretendard/Pretendard.css" rel="stylesheet">
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
     <script
             src="https://code.jquery.com/jquery-3.7.1.js"
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
             crossorigin="anonymous"></script>
     <!-- aos css -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- css 연결 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/css/sub1.css">
-    <link rel="stylesheet" href="/css/mypage/mypage.css">
-    <link rel="stylesheet" href="/css/sidebar.css">
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script><!-- 수정X -->
 
-    <!-- js -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script><!-- aos 라이브러리 -->
-    <script src="/js/aos.js"></script><!-- aos 소스 -->
+
+    <link rel="stylesheet" href="/css/sub1.css">
+
+    <link rel="stylesheet" href="/css/sidebar.css">
+
     <script src="/js/sub.js"></script>
     <script src="/js/script.js"></script>
     <meta charset="UTF-8">
 </head>
 <style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
+    body {
+        font-family: "Lato", sans-serif;
     }
 
-    div {
-        align-content: center;
-        position: relative;
-        width: 400px;
-        margin-left: 50px;
-        margin-top: 100px;
-    }
-
-    input {
-        font-size: 25px;
-        color: #333333;
-        width: 300px;
-        border: none;
-        border-bottom: solid #aaaaaa 1px;
-        padding-bottom: 10px;
-        padding-left: 10px;
-        position: relative;
-        background: none;
-        z-index: 5;
-    }
-
-
-    span {
-        display: block;
+    .sidenav {
+        height: 500px;
+        width: 180px;
         position: absolute;
-        bottom: 0;
-        left: 0%;  /* right로만 바꿔주면 오 - 왼 */
-        background-color: #666;
-        width: 0;
-        height: 2px;
-        border-radius: 2px;
-        transition: 0.5s;
+        z-index: 1;
+
+        left: 400px;
+        border-top: 2px solid black;
+        border-left: 2px solid black;
+        border-right: 2px solid black;
+
+        background-color: white;
+        overflow-x: hidden;
+        padding-top: 20px;
     }
 
-    label {
-        position: absolute;
-        color: #aaa;
-        left: 10px;
+    .sidenav a {
+
+        padding: 6px 6px 6px 32px;
+        text-decoration: none;
         font-size: 20px;
-        bottom: 8px;
-        transition: all .2s;
+        color: dodgerblue;
+        display: block;
+    }
+    .side_1{
+        border-top: none;
+        border-bottom: 1px solid black;
     }
 
-    input:focus ~ label, input:valid ~ label {
-        font-size: 16px;
-        bottom: 40px;
-        color: #666;
-        font-weight: bold;
+    .sidenav a:hover {
+        color: #f1f1f1;
+    }
+main{
+    min-height: 1000px;
+}
+    .main {
+        margin-left: 400px; /* Same as the width of the sidenav */
     }
 
-    input:focus ~ span, input:valid ~ span {
-        width: 100%;
+    @media screen and (max-height: 450px) {
+        .sidenav {padding-top: 15px;}
+        .sidenav a {font-size: 18px;}
     }
 
-    form {
-        width: 400px;
-        margin: auto; /* Add this line to center the form */
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    .pass_inform{
+        padding-bottom: 30px;
+        border-top: 1px solid darkgray;
+        border-bottom: 1px solid darkgray;
     }
 
-
-
+    .form_1{
+        padding-top: 150px;
+        width: 600px;
+    }
+    .btn_area{
+        margin-right: 250px;
+    }
+    .btn_area>button{
+        font-size: 25px;
+    }
 </style>
-
 <body>
 <div th:replace="~{/layout/header :: header-basic}"></div>
+<div class="container">
+    <main>
+<div class="sidenav">
+    <a class="side_1" href="#">민소매 정보</a>
+    <a href="#">정보 수정</a>
+    <a href="#">민소매 활동</a>
+    <a href="#">회원탈퇴</a>
+</div>
 
-<main class="container">
 
+<div class="main">
+    <form class="form_1">
+        <h3>개인정보 확인</h3>
+        <h5 style="font-weight: bolder">비밀번호 재확인</h5>
+        <p>회원님의 정보를 안전하게 보호하기 위해 비밀번호를 다시 한번 확인해주세요.</p>
+        <div class="pass_inform">
 
-    <div th:replace="~{/layout/sidebar :: sidebar-basic}"></div>
-    <!--회원정보 수정 폼-->
-    <form action=""  method="post">
+            <div class="form-floating mt-4 col-sm-8">
+                <input type="password" id="pass" class="form-control">
+                <label for="pass" class="">비밀번호</label>
+            </div>
 
-        <!--            <a href="/park/main.do"><img src="/img/minsome_s_person.png" sizes="15" alt="로고"></a>-->
-        <!--    <a href="/park/main.do"><img src="/img/minsome_s_person.png" sizes="15" alt="로고"></a>-->
-        <!--    <a href="/park/main.do"><img src="/img/minsome_s_person.png" sizes="15" alt="로고"></a>-->
+                <div class="form-floating mt-5 col-sm-8">
+                    <input type="password" id="pass_chk" class="form-control">
+                    <label for="pass_chk"  >비밀번호 재확인</label>
+                </div>
 
-        <h2 class="text-center">마이페이지 수정</h2>
-        <div>
-            <label for="id">ID</label>
-            <input type="text" id="id" name="id" readonly>
         </div>
-        <div>
-            <label for="name">NAME</label>
-            <input type="text" id="name" name="name" readonly>
-        </div>
-        <div>
-            <label for="password">new PW</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <div>
-            <label  for="nickName" >NickName</label>
-            <input type="text" id="nickName" name="nickName" required>
-        </div>
-        <div>
-            <button type="submit" class="btn btn-primary form-control">완료</button>
-
-            <a class="m-5" href="/login/login.do">Back to Home</a>
-        </div>
-
     </form>
+    <div class="d-flex justify-content-center btn_area">
+    <button type="button" style="width: 250px"   class="btn btn-primary mt-2">확인</button>
+    </div>
 
-
-
-
-
-
-</main>
-
-<div th:replace="/layout/footer :: footer-basic"></div>
+</div>
+    </main>
+</div>
+<div th:replace="~{/layout/footer :: footer-basic}"></div>
 </body>
 
 </html>
