--- a/update/src/main/resources/templates/park/parkMain.html
+++ b/update/src/main/resources/templates/park/parkMain.html
@@ -29,14 +29,18 @@
     <script src="/js/script.js"></script>
     <script src="/js/logout.js"></script>
     <style>
+
         /*.nav {width: 100%;}*/
-        .nav_1 li {position: relative; color: transparent; font-size: 30px; margin: 50px; -webkit-text-stroke: 1px black; transition: all .5s;}
+        .nav_1 li { position: relative; color: transparent; font-size: 30px; margin: 50px; -webkit-text-stroke: 1px black; transition: all .5s;}
         .nav_1 li:hover {color: black;}
-        .nav_1 li:hover img {display: block;}
-        .nav_1 li img {display: none; position: absolute; left: 50%; top: 50%; width: 400px; height: 500px; transform: translate(-50%,-50%); z-index: -1; transition: all .5s; border-radius: 15px;}
+        .nav_1 li:hover img {display: block; z-index: 1}
+        .nav_1 li img { display: none; border: 1px solid black; position: absolute; left: 50%; top: 50%; width: 400px; height: 500px; transform: translate(-50%,-50%); z-index: -1; transition: all .5s; border-radius: 15px;}
         .spot1{
             margin: auto;
+
         }
+
+
     </style>
 
 </head>
@@ -51,7 +55,7 @@
 <div class="sub2_top">
 
 </div>
-
+<div class="back">
 <div id="sub2">
     <h2>뛰어봤나! 여기가 부산이다!</h2>
     <h4>민소매가 추천해요.</h4>
@@ -77,9 +81,9 @@
             </ul>
         </div>
         <br><br><br>
-
     </div>
-
+    </div>
+</div>
     <div class="spot1" style="height: 500px">
         <img src="/img/runimg1.jfif" style="height: auto; width: 45%" alt="1">
         <div class="spottext">
